# mcp-google-scholar

./: pyproject.toml  server.py  test.py  web_search.py
